--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body {
 .logo {
   font-family: "DM Serif Display", serif;
   color: white;
-  font-size: 8rem;
+  font-size: 6rem;
   letter-spacing: 0.5rem;
   padding: 0;
   margin: 0;
@@ -78,28 +78,6 @@ body {
   transform-origin: center top;
 }
 
-.spinner {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  margin-right: -42px;
-  margin-top: -42px;
-  animation: fadeIn 2.4s ease-in-out 1.2s forwards;
-  opacity: 0;
-}
-
-.spinner__image {
-  width: 164px;
-  height: 164px;
-  background-size: contain;
-  background-image: url("/images/wawa.svg");
-  animation: rotate 10s linear infinite;
-}
-
-.intro--disappear .spinner {
-  opacity: 1;
-  animation: fadeOut 1s ease-in-out forwards;
-}
 
 .intro__scroll {
   opacity: 0;
@@ -125,7 +103,7 @@ body {
   font-family: "DM Serif Display", serif;
   font-size: 1.25rem;
   letter-spacing: 0.25rem;
-  color: #3535cc;
+  color: #35ccae;
   border-radius: 32px;
   cursor: pointer;
   display: inline-block;
@@ -146,12 +124,12 @@ body {
 .explore:hover:before {
   width: 200%;
   height: 300%;
-  border-radius: 100%;
+  border-radius: 25%;
 }
 
 .explore:before {
   content: "";
-  background: #3535cc;
+  background: #36ffe1;
   position: absolute;
   width: 0%;
   bottom: 0;
