--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body {
 .menu {
   width: 100%;
   font-size: 6rem;
-  letter-spacing: 0.5rem;
+  /* letter-spacing: 0.5rem; */
   padding: 0;
   margin: 0;
   transform: translateY(-50%);
@@ -72,7 +72,7 @@ body {
   transform: scale(0.25);
   transform-origin: center top;
   z-index: 100;
-  cursor: pointer;
+  /* cursor: pointer; */
 
 }
 
@@ -84,8 +84,11 @@ body {
   appearance: none;
   list-style-type: none;
   font-family: "DM Serif Display", serif;
-  cursor: pointer;
   z-index: 2000;
+}
+
+li {
+  cursor: pointer;
 }
 
 
@@ -127,27 +130,8 @@ body {
   /* opacity: 0; */
 }
 
-.explore:hover {
-  color: white;
-}
-
-.explore:hover:before {
-  width: 200%;
-  height: 300%;
-  border-radius: 25%;
-}
-
-.explore:before {
-  content: "";
-  background: #36ffe1;
-  position: absolute;
-  width: 0%;
-  bottom: 0;
-  left: 50%;
-  height: 0%;
-  transition: 0.42s ease-in-out;
-  z-index: -1;
-  transform: translateX(-50%) translateY(50%);
+a:hover {
+  color: rgb(49, 255, 128);
 }
 
 .intro--disappear .explore {
